# home-finance-api

./: Cargo.toml  Dockerfile
src/: main.rs
src/database/: mod.rs
src/dtos/: create_group_dto.rs  create_income_dto.rs  create_user_dto.rs  list_income_user.rs  login_user_dto.rs  mod.rs
src/entities/: group.rs  income.rs  mod.rs  outcome.rs  user.rs
src/errors/: bad_request_error.rs  internal_server_error.rs  mod.rs  service_error.rs  unauthorized_error.rs
src/middlewares/: auth.rs
src/repositories/: create_user_repository.rs  group_repository.rs  income_repository.rs  mod.rs  user_repository.rs
src/routes/: group_routes.rs  income_routes.rs  mod.rs  user_routes.rs
src/services/: create_group.rs  create_user.rs  login_user.rs  mod.rs
src/services/create_group/: implementation.rs  mod.rs  trait_definition.rs
src/services/create_income/: implementation.rs  trait_definition.rs
src/services/create_user/: implementation.rs  mod.rs  trait_definition.rs
src/services/list_income_user_id/: implementation.rs  trait_definition.rs
src/services/login_user/: implementation.rs  mod.rs  trait_definition.rs
src/utils/: crypto.rs  jwt.rs  mod.rs  timestamps.rs
