[package]
name = "home-finance-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
aes = "0.8.4"
aes-gcm = "0.10.3"
anyhow = "1.0.89"
argon2 = "0.5.3"
async-trait = "0.1.83"
bson =  { version = "2.13.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.31"
generic-array = "1.1.0"
hex = "0.4.3"
jsonwebtoken = "9.3.0"
mongodb = { version = "3.1.0", features = ["sync"] }
once_cell = "1.19.0"
rayon = "1.10.0"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = "1.40.0"
